--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Visualization Gallery</a>
+            <a class="nav-link" href="vizgallery.html">Visualization Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Code Snippets</a>
+            <a class="nav-link" href="codesnippets.html">Code Snippets</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="#">Github</a>
@@ -62,9 +62,39 @@
     </div>
   </div>
   <div class="col-lg-12 text-center">
-    <p class="lead">I am a alumnus of the University of Illinois. I enjoy designing and programming data analysis and data visualizations</p>
-  
+    <p class="lead">I am a alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a>. I enjoy designing and programming data analysis and data visualizations
+    </br>
+    <a href="https://ayu5.github.io/UIUC-class/">Every class I took at University of Illinois</a>
+    </p>
+    
+    <h2>Technical Skills</h2>
+    <p><b>R</b></p>
+            <ul class="list-unstyled">
+                <li> Data Wrangling: dplyr</li>
+                <li> Data visualization: ggplot2, NetworkD3 <a href="https://ayu5.github.io/UIUC-class/">(1)</a></li>
+                <li> Shiny</li>
+                <li> Statistics</li>
+            </ul>
+            <p><b>Python</b></p>
+            <ul class="list-unstyled">
+                <li> Data Wrangling: pandas</li>
+                <li> Data Visualization: matplotlib, seaborn, plotly <a href="https://nbviewer.jupyter.org/github/ayu5/Data-Viz/blob/master/Most%20Dangerous%20Modes%20of%20Transport.ipynb">(1)</a></li>
+                <li> Numerical Methods: NumPy, SciPy</li>
+            </ul>
+            <p><b>Java</b></p>
+            <p><b>DataBases: SQL (MySQL)</b></p>
+            <p><b>Version Control: Git/Github</b></p>
+            <p><b>Web frontend: HTML/CSS</b></p>
+            <p><b>Software: Microsoft Office Suite, Tableau, Qualtrics</b></p>
   </div>
+  <!-- Footer -->
+  <footer class="bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Alan Yu 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
 
 
   <!-- Bootstrap core JavaScript -->
