--- a/projects.html
+++ b/projects.html
@@ -62,25 +62,25 @@ body {font-family: Arial;}
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Alan Yu</a>
+      <a class="navbar-brand" href="index.html">Alan Yu</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Visualization Gallery</a>
+            <a class="nav-link" href="vizgallery.html">Visualization Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Code Snippets</a>
+            <a class="nav-link" href="codesnippets.html">Code Snippets</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/ayu5">Github</a>
