--- a/codesnippets.html
+++ b/codesnippets.html
@@ -69,7 +69,11 @@
 
         <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <ul>
+              <li>
+                  <a href="https://nbviewer.jupyter.org/github/ayu5/code-snippets/blob/master/Nested%20List%20to%20List%20of%20Tuples%20%28Page%20Rank%29.ipynb">Combine two nested lists to a list of tuples</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -80,9 +84,9 @@
             </a>
           </h5>
         </div>
-        <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+        <div id="collapseTwo" class="collapse show" role="tabpanel" aria-labelledby="headingTwo">
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <a href="https://nbviewer.jupyter.org/github/ayu5/code-snippets/blob/master/Nested%20List%20to%20List%20of%20Tuples%20%28Page%20Rank%29.ipynb">Combine two nested lists to a list of tuples</a>
           </div>
         </div>
       </div>
@@ -94,7 +98,7 @@
         </div>
         <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
           <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <a href="https://nbviewer.jupyter.org/github/ayu5/code-snippets/blob/master/Nested%20List%20to%20List%20of%20Tuples%20%28Page%20Rank%29.ipynb">Combine two nested lists to a list of tuples</a>
           </div>
         </div>
       </div>
@@ -106,7 +110,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">&copy; 2019 Copyright: Alan Yu</p>
     </div>
     <!-- /.container -->
   </footer>
