--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -41,7 +41,7 @@
             <a class="nav-link" href="codesnippets.html">Code Snippets</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Github</a>
+              <a class="nav-link" href="https://github.com/ayu5">Github</a>
           </li>
         </ul>
       </div>
@@ -56,7 +56,7 @@
         <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
         <ul class="list-unstyled">
           <li><b>Contact</b>: alany1510@gmail.com</li>
-          <li><b>Connect</b> on <a href="#">Linkedin</a></li>
+          <li><b>Connect</b> on with me on <a href="www.linkedin.com/in/alanyu2">Linkedin</a></li>
         </ul>
       </div>
     </div>
@@ -88,9 +88,9 @@
             <p><b>Software: Microsoft Office Suite, Tableau, Qualtrics</b></p>
   </div>
   <!-- Footer -->
-  <footer class="bg-dark">
+  <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Alan Yu 2019</p>
+      <p class="m-0 text-center text-white">&copy; 2019 Copyright: Alan Yu</p>
     </div>
     <!-- /.container -->
   </footer>
