--- a/vizgallery.html
+++ b/vizgallery.html
@@ -55,26 +55,21 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Portfolio 2
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">Data Visualization Gallery
+      
     </h1>
 
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item active">Portfolio 2</li>
-    </ol>
+    
 
     <div class="row">
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/UIUC-class/master/class_network1.png" alt="networkgraph"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="https://ayu5.github.io/UIUC-class/">Network graph</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">A network graph of all 46 classes I took during my undergrad at UIUC.</p>
           </div>
         </div>
       </div>
@@ -167,7 +162,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">&copy; 2019 Copyright: Alan Yu</p>
     </div>
     <!-- /.container -->
   </footer>
