--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@ body {font-family: Arial;}
   <!-- Tab links -->
 <div class="tab">
     <button class="tablinks" onclick="openCity(event, 'Exploratory Data Analysis')" id="defaultOpen">Exploratory Data Analysis</button>
-    <button class="tablinks" onclick="openCity(event, 'Statistical Analysis')">Statistical Analysis</button>
+    <!--<button class="tablinks" onclick="openCity(event, 'Statistical Analysis')">Statistical Analysis</button> -->
     <button class="tablinks" onclick="openCity(event, 'Machine Learning')">Machine Learning</button>
     <button class="tablinks" onclick="openCity(event, 'SQL')">SQL</button>
   </div>
@@ -282,27 +282,6 @@ body {font-family: Arial;}
     <!-- /.row -->
 
     <hr>
-
-    <!-- Project Three -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3>Project Three</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-        <a class="btn btn-primary" href="#">View Project
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center">
