--- a/codesnippets.html
+++ b/codesnippets.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>Alan Yu</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,6 +72,9 @@
             <ul>
               <li>
                   <a href="https://nbviewer.jupyter.org/github/ayu5/code-snippets/blob/master/Nested%20List%20to%20List%20of%20Tuples%20%28Page%20Rank%29.ipynb">Combine two nested lists to a list of tuples</a>
+              </li>
+              <li>
+                  <a href="https://nbviewer.jupyter.org/github/ayu5/code-snippets/blob/master/Sum%20the%20quantities%20based%20on%20merged%20data%20.ipynb">Filtering data based on 2 columns and summing its quantity</a>
               </li>
             </ul>
           </div>
