--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+  <style>
+    pmain {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    }
+  </style>
   <title>Alan Yu uiuc</title>
 
   <!-- Bootstrap core CSS -->
@@ -53,7 +61,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">Alan Yu</h1>
-        <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+        <p class="lead">Data Analyst</p>
         <ul class="list-unstyled">
           <li><b>Contact</b>: alany1510@gmail.com</li>
           <li><b>Connect</b> on with me on <a href="www.linkedin.com/in/alanyu2">Linkedin</a></li>
@@ -62,8 +70,14 @@
     </div>
   </div>
   <div class="col-lg-12 text-center">
-    <p class="lead">I am a alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a>. I enjoy designing and programming data analysis and data visualizations
+    <p class="lead">I am a alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations
     </br>
+    <p class="lead">
+      My interest in statistics stems from my desire to understand uncertainty and reduce complexity; 
+    </p>
+    <p class="lead">
+      from modelling randomness to quanitfying uncertain things or estimating outcomes. 
+      </p>
     <a href="https://ayu5.github.io/UIUC-class/">Every class I took at University of Illinois</a>
     </p>
     
