--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li> Numerical Methods: NumPy, SciPy</li>
             </ul>
             <p><b>Java</b></p>
-            <p><b>DataBases: SQL (MySQL)</b></p>
+            <p><b>DataBases: SQL (MySQL, sqlite3)</b></p>
             <p><b>Version Control: Git/Github</b></p>
             <p><b>Web frontend: HTML/CSS</b></p>
             <p><b>Software: Microsoft Office Suite, Tableau, Qualtrics</b></p>
