--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,8 @@ body {font-family: Arial;}
       </div>
       <div class="col-md-5">
         <h3>Predicting Electricity Load Demands in Texas</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+        <p>In this project, we will use R to analyze and visualize electricity demand trend in Texas. We will also predict short term load demands using linear regression. 
+          Data Source: <a href="http://www.ercot.com/gridinfo/generation">ERCOT</a></p>
         <a class="btn btn-primary" href="https://ayu5.github.io/Electricity-Load-Prediction/">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
@@ -133,7 +134,7 @@ body {font-family: Arial;}
       </div>
       <div class="col-md-5">
         <h3>Speed Dating Data Exporation</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+        <p>Here we analyze gender differences in dating preferences. We also explore how people perceive themselves compared to how others perceive you.</p>
         <a class="btn btn-primary" href="#">View Project
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
