--- a/vizgallery.html
+++ b/vizgallery.html
@@ -64,23 +64,23 @@
     <div class="row">
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/UIUC-class/master/class_network1.png" alt="networkgraph"></a>
+          <a href="https://ayu5.github.io/UIUC-class/"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/UIUC-class/master/class_network1.png" alt="networkgraph"></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="https://ayu5.github.io/UIUC-class/">Network graph</a>
             </h4>
-            <p class="card-text">A network graph of all 46 classes I took during my undergrad at UIUC.</p>
+            <p class="card-text">A network graph using the NetworkD3 R package showing all 46 classes I took during my 4 years of undergrad at Illinois.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="https://github.com/ayu5/viz0619"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/viz0619/master/README_figs/README-unnamed-chunk-6-1.png" alt="scatterplot1"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              <a href="https://github.com/ayu5/viz0619">World Happiness and GDP</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            <p class="card-text">The top 10 and bottom 10 Happiness Rankings from the World Happiness Report (2017).</p>
           </div>
         </div>
       </div>
