--- a/index.html
+++ b/index.html
@@ -70,19 +70,15 @@
     </div>
   </div>
   <div class="col-lg-12 text-center">
-    <p class="lead">I am a alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations
-    </br>
-    <p class="lead">
-      My interest in statistics stems from my desire to understand uncertainty and reduce complexity; 
-    </p>
-    <p class="lead">
-      from modelling randomness to quanitfying uncertain things or estimating outcomes. 
+    <p class="lead" style="display:block;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 350px;margin-inline-end: 350px;">
+      Hi, I'm Alan. I am a alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations.
+    
       </p>
     <a href="https://ayu5.github.io/UIUC-class/">Every class I took at University of Illinois</a>
     </p>
     
     <h2>Technical Skills</h2>
-    <p><b>R</b></p>
+    <p class="lead"><b>R</b></p>
             <ul class="list-unstyled">
                 <li> Data Wrangling: dplyr</li>
                 <li> Data visualization: ggplot2, NetworkD3 <a href="https://ayu5.github.io/UIUC-class/">(1)</a></li>
