--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h1 class="mt-5">Alan Yu</h1>
         <p class="lead">Data Analyst</p>
         <ul class="list-unstyled">
-          <li><b>Contact</b>: alany1510@gmail.com</li>
-          <li><b>Connect</b> on with me on <a href="www.linkedin.com/in/alanyu2">Linkedin</a></li>
+          <li class="lead"><b>Contact</b>: alany1510@gmail.com</li>
+          <li class="lead"><b>Connect</b> with me on <a href="www.linkedin.com/in/alanyu2">Linkedin</a></li>
         </ul>
       </div>
     </div>
@@ -79,23 +79,23 @@
     
     <h2>Technical Skills</h2>
     <p class="lead"><b>R</b></p>
-            <ul class="list-unstyled">
+            <ul class="list-unstyled lead">
                 <li> Data Wrangling: dplyr</li>
                 <li> Data visualization: ggplot2, NetworkD3 <a href="https://ayu5.github.io/UIUC-class/">(1)</a></li>
                 <li> Shiny</li>
                 <li> Statistics</li>
             </ul>
-            <p><b>Python</b></p>
-            <ul class="list-unstyled">
+            <p class="lead"><b>Python</b></p>
+            <ul class="list-unstyled lead">
                 <li> Data Wrangling: pandas</li>
                 <li> Data Visualization: matplotlib, seaborn, plotly <a href="https://nbviewer.jupyter.org/github/ayu5/Data-Viz/blob/master/Most%20Dangerous%20Modes%20of%20Transport.ipynb">(1)</a></li>
                 <li> Numerical Methods: NumPy, SciPy</li>
             </ul>
-            <p><b>Java</b></p>
-            <p><b>DataBases: SQL (MySQL, sqlite3)</b></p>
-            <p><b>Version Control: Git/Github</b></p>
-            <p><b>Web frontend: HTML/CSS</b></p>
-            <p><b>Software: Microsoft Office Suite, Tableau, Qualtrics</b></p>
+            <p class="lead"><b>Java</b></p>
+            <p class="lead"><b>DataBases: SQL (MySQL, sqlite3)</b></p>
+            <p class="lead"><b>Version Control: Git/Github</b></p>
+            <p class="lead"><b>Web frontend: HTML/CSS</b></p>
+            <p class="lead"><b>Software: Microsoft Office Suite, Tableau, Qualtrics</b></p>
   </div>
   <!-- Footer -->
   <footer class="py-5 bg-dark">
