--- a/vizgallery.html
+++ b/vizgallery.html
@@ -67,7 +67,7 @@
           <a href="https://ayu5.github.io/UIUC-class/"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/UIUC-class/master/class_network1.png" alt="networkgraph"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="https://ayu5.github.io/UIUC-class/">Network graph</a>
+              <a href="https://ayu5.github.io/UIUC-class/">Diagonal network graph</a>
             </h4>
             <p class="card-text">A network graph using the NetworkD3 R package showing all 46 classes I took during my 4 years of undergrad at Illinois.</p>
           </div>
