--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <div class="col-lg-12 text-center">
     <p class="lead" style="display:block;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 350px;margin-inline-end: 350px;">
-      Hi, I'm Alan. I am a alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations.
+      Hi, I'm Alan. I am an alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations.
     
       </p>
     <a href="https://ayu5.github.io/UIUC-class/">Every class I took at University of Illinois</a>
