--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
 
     <hr>
 
-    <!-- Project Three -->
+    <!-- Project Three 
     <div class="row">
       <div class="col-md-7">
         <a href="#">
@@ -113,11 +113,12 @@
         </a>
       </div>
     </div>
+    -->
     <!-- /.row -->
 
     <hr>
 
-    <!-- Project Four -->
+    <!-- Project Four 
     <div class="row">
 
       <div class="col-md-7">
@@ -133,11 +134,12 @@
         </a>
       </div>
     </div>
+    -->
     <!-- /.row -->
 
     <hr>
 
-    <!-- Pagination -->
+    <!-- Pagination 
     <ul class="pagination justify-content-center">
       <li class="page-item">
         <a class="page-link" href="#" aria-label="Previous">
@@ -163,6 +165,7 @@
     </ul>
 
   </div>
+  -->
   <!-- /.container -->
 
   <!-- Footer -->
