--- a/projects.html
+++ b/projects.html
@@ -167,11 +167,11 @@
   </div>
   -->
   <!-- /.container -->
-
   <!-- Footer -->
+  </div>
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">&copy; 2019 Copyright: Alan Yu</p>
     </div>
     <!-- /.container -->
   </footer>
