--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
         <p class="lead">Data Analyst</p>
         <ul class="list-unstyled">
           <li class="lead"><b>Contact</b>: alany1510@gmail.com</li>
-          <li class="lead"><b>Connect</b> with me on <a href="www.linkedin.com/in/alanyu2">Linkedin</a></li>
+          <li class="lead"><b>Connect</b> with me on <a href="https://www.linkedin.com/in/alanyu2/">Linkedin</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="col-lg-12 text-center">
     <p class="lead" style="display:block;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 350px;margin-inline-end: 350px;">
-      Hi, I'm Alan. I am an alumnus of the <a href="www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations.
+      Hi, I'm Alan. I am an alumnus of the <a href="https://www.illinois.edu" target="_blank">University of Illinois</a> majoring in statistics. I enjoy designing and programming data analysis and data visualizations.
     
       </p>
     <a href="https://ayu5.github.io/UIUC-class/">Every class I took at University of Illinois</a>
