--- a/vizgallery.html
+++ b/vizgallery.html
@@ -65,7 +65,7 @@
           <a href="https://ayu5.github.io/UIUC-class/"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/UIUC-class/master/class_network1.png" alt="networkgraph"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="https://ayu5.github.io/UIUC-class/">Diagonal network graph</a>
+              <a href="https://ayu5.github.io/UIUC-class/">Class Network Graph</a>
             </h4>
             <p class="card-text">A network graph using the NetworkD3 R package showing all 46 classes I took during my 4 years of undergrad at Illinois.</p>
           </div>
@@ -86,12 +86,12 @@
       
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="https://github.com/ayu5/Data-Viz/blob/master/output_8_0.png"><img class="card-img-top" src="https://raw.githubusercontent.com/ayu5/Data-Viz/master/output_8_0.png" alt="movement"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Five</a>
+              <a href="#">Patient Movement Tracking</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">A treadmill with special sensors identifies which part of a person's foot is touching the treadmill. This graph shows how a person walks over time. Red dots indicate the center of 1 stride (after 2 steps are taken).</p>
           </div>
         </div>
       </div>
